--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           key: backend-build
 
 workflows:
-   defaults:
+   default:
       jobs:
-        - build frontend
+        - build-frontend
         - build-backend
