--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,34 @@ jobs:
              npm install
              npm run test
 
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Analyze for security vulnerability in frontend
+          command: |
+            cd frontend
+            npm install
+            
+            npm audit fix --audit-level=critical --force
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Analyze for security vulnerability in backend
+          command: |
+            cd backend
+            npm install
+            npm audit fix --audit-level=critical --force
+
 
 
 
@@ -70,5 +98,11 @@ workflows:
       jobs:
         - build-frontend
         - build-backend
-        - test-frontend
-        - test-backend
+        - test-frontend:
+            requires: [build-frontend]
+        - test-backend:
+            requires: [build-backend]
+        - scan-backend:
+            requires: [build-backend]
+        - scan-frontend:
+            requires: [build-frontend]
