--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             cd frontend
             npm install
             
-            npm audit fix --audit-level=critical 
+            npm audit --audit-level=critical 
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -88,7 +88,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --audit-level=critical 
+            npm audit --audit-level=critical 
 
 
 
