--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,25 @@
 version: 2.1
+commands:
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      workflow-id:
+          type: string
+          default: "{CIRCLE_WORKFLOW_ID:0:7}"  
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack \
+                --stack-name udapipo-backend-<< parameters.workflow-id >> \
+                --region us-east-1
+            aws s3 rm s3://udapipo-<< parameters.workflow-id >> --recursive
+            aws cloudformation delete-stack \
+                --stack-name udapipo-frontend-<< parameters.workflow-id >> \
+                --region us-east-1
+            exit 1
+
 
 jobs:
   build-frontend:
@@ -90,6 +111,91 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
 
+  
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+            name: install tar and gzip
+            command: |
+              yum install -y tar gzip
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --tags project= udapipo \
+              --stack-name "udapipo-backend-" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+              
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+              aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --tags project=udapipo\
+              --stack-name "udapipo-frontend-" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"       
+
+      - run:
+          name: Add back-end ip to ansible inventory
+          command: |
+                  echo $(aws ec2 describe-instances \
+                  --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                  --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+                  --output text) >> ~/project/.circleci/ansible/inventory.txt
+                  cat ~/project/.circleci/ansible/inventory.txt
+          - persist_to_workspace:
+                root: ~/
+                paths:
+                    - project/.circleci/ansible/inventory.txt
+              - destroy-environment:
+                    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}   
+
+  deploy-infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+         name: install tar and gzip
+         command: |
+            yum install -y tar gzip
+
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --tags project=udapipo \
+               --stack-name "udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+              
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --tags project=udapipo \
+              --stack-name "udapipo-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+             
+      - run:
+          name: Add back-end ip to ansible inventory
+          command: |
+             echo $(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --output text) >> ~/project/.circleci/ansible/inventory.txt
+              cat ~/project/.circleci/ansible/inventory.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/inventory.txt
+      # Here's where you will add some code to rollback on failure 
+      - destroy-environment:
+            workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
 
 
 
@@ -106,3 +212,7 @@ workflows:
             requires: [build-backend]
         - scan-frontend:
             requires: [build-frontend]
+        - deploy-infrastructure:
+            requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+        - configure-infrastructure:
+            requires: [deploy-infrastructure]
