--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,148 @@ jobs:
       - destroy-environment:
             workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
 
+configure-infrastructure:
+      docker:
+        - image: python:3.7-alpine3.16
+      steps:
+        - checkout
+        - add_ssh_keys:
+            fingerprints:
+              - "0f:65:3c:ef:e7:d1:03:59:74:97:43:b5:9a:78:4d:1b:1d:7c:20:59"
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update --no-cache tar gzip curl ansible aws-cli
+        - attach_workspace:
+            at: ~/
+        - run:
+            name: Configure server
+            command: |
+              # add environment variables to server
+              echo ENVIRONMENT=production > ~/project/backend/.env
+              echo NODE_ENV=production >> ~/project/backend/.env
+              echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
+              echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
+              echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
+              echo TYPEORM_HOST=$TYPEORM_HOST >> ~/project/backend/.env
+              echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
+              echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/project/backend/.env
+              echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
+              echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
+              echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
+              cat ~/project/backend/.env
+              cd ~/project/.circleci/ansible/
+              ansible-playbook -i inventory.txt configure-server.yml
+        - persist_to_workspace:
+            root: ~/
+            paths:
+              - project/backend
+        - destroy-environment:
+            workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+
+run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt update && sudo apt install -y tar gzip curl
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
+      - restore_cache:
+          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm run migrations > migrations
+            cat migrations
+      - run:
+          name: Send migration results to kvdb
+          command: |
+            if grep -q "success" ~/project/backend/migrations
+            then
+              curl --insecure https://kvdb.io/7vNukFKzJst2UJ4ToaREYa/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+            fi
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/backend
+      - destroy-environment:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+
+deploy-frontend:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm aws-cli
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+deploy-backend:
+    docker:
+      - image: python:3.7-alpine3.16
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "0f:65:3c:ef:e7:d1:03:59:74:97:43:b5:9a:78:4d:1b:1d:7c:20:59"
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm aws-cli ansible
+      - restore_cache:
+          keys: [backend-build]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm install
+            npm run build
+            cd ..
+            tar -C backend -czvf artifact.tar.gz .
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            cd .circleci/ansible
+            echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
 workflows:
@@ -172,4 +314,12 @@ workflows:
             requires: [build-frontend]
         - deploy-infrastructure:
             requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+        - configure-infrastructure:
+            requires: [deploy-infrastructure]
+        - run-migrations:
+            requires: [configure-infrastructure]
+        - deploy-frontend:
+            requires: [run-migrations]
+        - deploy-backend:
+             requires: [run-migrations]
         
