--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,20 @@ commands:
             aws cloudformation delete-stack \
                 --stack-name udapipo-frontend-<< parameters.workflow-id >> \
                 --region us-east-1
-            
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: reverse migration
+          when: on_fail
+          command: |
+              cd ~/project/backend
+              npm install
+              npm run build
+              npm run migration:revert         
 
 
 jobs:
@@ -325,4 +338,5 @@ workflows:
             requires: [run-migrations]
         - deploy-backend:
             requires: [run-migrations]
+         
         
