--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -10,7 +10,7 @@ Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "chisomudapipo"
+      BucketName: !Sub "chisomudapipo-${ID}"
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
