--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
           name: reverse migration
           when: on_fail
           command: |
-              cd ~/cdond-c3-projectstarter/backend
+              cd ~/project/backend
               npm install
               npm run build
               npm run migration:revert         
@@ -160,12 +160,12 @@ jobs:
              echo $(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --output text) >> ~/cdond-c3-projectstarter/.circleci/ansible/inventory.txt
-              cat ~/cdond-c3-projectstarter/.circleci/ansible/inventory.txt
+              --output text) >> ~/project/.circleci/ansible/inventory.txt
+              cat ~/project/.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
-            - cdond-c3-projectstarter/.circleci/ansible/inventory.txt
+            - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure 
       - destroy-environment:
             workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
@@ -188,24 +188,24 @@ jobs:
             name: Configure server
             command: |
               # add environment variables to server
-              echo ENVIRONMENT=production > ~/cdond-c3-projectstarter/backend/.env
-              echo NODE_ENV=production >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_HOST=$TYPEORM_HOST >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_PORT=$TYPEORM_PORT >> ~/cdond-c3-projectstarter/backend/.env
-              echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/cdond-c3-projectstarter/backend/.env
-              cat ~/cdond-c3-projectstarter/backend/.env
-              cd ~/cdond-c3-projectstarter/.circleci/ansible/
+              echo ENVIRONMENT=production > ~/project/backend/.env
+              echo NODE_ENV=production >> ~/project/backend/.env
+              echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
+              echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
+              echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
+              echo TYPEORM_HOST=$TYPEORM_HOST >> ~/project/backend/.env
+              echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
+              echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/project/backend/.env
+              echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
+              echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
+              echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
+              cat ~/project/backend/.env
+              cd ~/project/.circleci/ansible/
               ansible-playbook -i inventory.txt configure-server.yml
         - persist_to_workspace:
             root: ~/
             paths:
-              - cdond-c3-projectstarter/backend
+              - project/backend
         - destroy-environment:
             workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
@@ -234,14 +234,14 @@ jobs:
       - run:
           name: Send migration results to kvdb
           command: |
-            if grep -q "success" ~/cdond-c3-projectstarter/backend/migrations
+            if grep -q "success" ~/project/backend/migrations
             then
               curl --insecure https://kvdb.io/7vNukFKzJst2UJ4ToaREYa/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - persist_to_workspace:
           root: ~/
           paths:
-            - cdond-c3-projectstarter/backend
+            - project/backend
       - destroy-environment:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
@@ -304,7 +304,7 @@ jobs:
             npm run build
             cd ..
             tar -C backend -czvf artifact.tar.gz . 
-            mkdir -p ~/cdond-c3-projectstarter/.circleci/ansible/roles/deploy/files/
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
