--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,6 @@
 version: 2.1
 commands:
-  destroy-environment:
-    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-    parameters:
-      workflow-id:
-          type: string
-          default: "{CIRCLE_WORKFLOW_ID:0:7}"  
-    steps:
-      - run:
-          name: Destroy environments
-          when: on_fail
-          command: |
-            aws cloudformation delete-stack \
-                --stack-name udapipo-backend-<< parameters.workflow-id >> \
-                --region us-east-1
-            aws s3 rm s3://udapipo-<< parameters.workflow-id >> --recursive
-            aws cloudformation delete-stack \
-                --stack-name udapipo-frontend-<< parameters.workflow-id >> \
-                --region us-east-1
+ 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
@@ -167,8 +150,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure 
-      - destroy-environment:
-            workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
+      #- destroy-environment:
+        #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
 
   configure-infrastructure:
       docker:
