--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,8 +150,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure 
-      #- destroy-environment:
-        #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
+            #- destroy-environment:
+             #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
 
   configure-infrastructure:
       docker:
@@ -225,8 +225,8 @@ jobs:
           root: ~/
           paths:
             - project/backend
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+     # - destroy-environment:
+      #    workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   deploy-frontend:
     docker:
@@ -258,8 +258,8 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+    #  - destroy-environment:
+      #    workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
