--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,23 @@
 version: 2.1
 commands:
- 
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      workflow-id:
+          type: string
+          default: "{CIRCLE_WORKFLOW_ID:0:7}"  
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack \
+                --stack-name udapipo-backend-<< parameters.workflow-id >> \
+                --region us-east-1
+            aws s3 rm s3://udapipo-<< parameters.workflow-id >> --recursive
+            aws cloudformation delete-stack \
+                --stack-name udapipo-frontend-<< parameters.workflow-id >> \
+                --region us-east-1
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
@@ -150,8 +167,8 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure 
-            #- destroy-environment:
-             #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
+      - destroy-environment:
+            workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}           
 
   configure-infrastructure:
       docker:
@@ -225,8 +242,7 @@ jobs:
           root: ~/
           paths:
             - project/backend
-     # - destroy-environment:
-      #    workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      #add destroy env
 
   deploy-frontend:
     docker:
@@ -258,8 +274,8 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-    #  - destroy-environment:
-      #    workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - destroy-environment:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
