--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,8 +274,7 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      #add destroy env
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
   
@@ -286,7 +285,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "0f:65:3c:ef:e7:d1:03:59:74:97:43:b5:9a:78:4d:1b:1d:7c:20:59"
+            - "2a:89:4a:90:9a:d5:cb:a1:dd:bf:ee:da:d1:7d:08:c6"
       - run:
           name: Install dependencies
           command: |
@@ -308,8 +307,7 @@ jobs:
             cd .circleci/ansible
             echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+      #add destroy env
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
