--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -310,48 +310,53 @@ jobs:
       #add destroy env
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-
+  
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: python:3.7-alpine3.11
     steps:
-    - checkout
-    - run:
-        name: Install dependencies
-        command: |
-          apk add --update --no-cache curl aws-cli nodejs npm tar gzip
-    - run:
-        name: Backend smoke test
-        command: |
-          export BACKEND_IP=$(aws ec2 describe-instances \
-          --query 'Reservations[*].Instances[*].PublicIpAddress' \
-          --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-          --output text)
-          export API_URL="http://${BACKEND_IP}:3030"
-          echo "${API_URL}"
-          sleep 40
-          if curl --connect-timeout 5 "${API_URL}/api/status" | grep "ok"
-          then
-            return 0
-          else
-            return 1
-          fi
-    - run:
-        name: Frontend smoke test.
-        command: |
-          URL="http://udapipo-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-          echo $URL
-          if curl -s ${URL} | grep "Welcome"
-          then
-              # Change this to 0 after the job fails
-            return 0
-          else
-            return 1
-          fi
-    - destroy-environment:
-        workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
-    - revert-migrations:
-        workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl
+            pip install awscli
+            pip install nodejs
+            pip install npm
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances...............)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$( aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name, Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
+            echo "$BACKEND_IP"
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok" 
+            then
+                return 0
+            else
+                return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi
+      - destroy-environment  
+      - revert-migrations
 
 
 
