--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -310,30 +310,30 @@ jobs:
       #add destroy env
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  
+
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:3.7-alpine3.16
     steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update curl
-            pip install awscli
-            pip install nodejs
-            pip install npm
-      - run:
-          name: Get backend url
-          command: |
+    - checkout
+    - run:
+        name: Install dependencies
+        command: |
+           apk add --update curl
+           pip install awscli
+           pip install nodejs
+           pip install npm
+    - run: 
+        name: Get backend url
+        command: |
             export BACKEND_IP=$(aws ec2 describe-instances...............)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
-      - run:
-          name: Backend smoke test.
-          command: |
+            cat frontend/.env      
+    - run:
+        name: Backend smoke test
+        command: |
             export BACKEND_IP=$( aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name, Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
             echo "$BACKEND_IP"
             export API_URL="http://${BACKEND_IP}:3030"
@@ -344,10 +344,10 @@ jobs:
             else
                 return 1
             fi
-      - run:
-          name: Frontend smoke test.
-          command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+    - run:
+        name: Frontend smoke test.
+        command: |
+            URL="http://udapipo-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
@@ -355,8 +355,11 @@ jobs:
             else
               return 1
             fi
-      - destroy-environment  
-      - revert-migrations
+            
+    - destroy-environment:
+        workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+    - revert-migrations:
+        workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 
 
