--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,8 +275,7 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       #add destroy env
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+    
   
   deploy-backend:
     docker:
@@ -325,12 +324,16 @@ jobs:
            pip install npm
     - run: 
         name: Get backend url
+        
         command: |
-            export BACKEND_IP=$(aws ec2 describe-instances...............)
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
-            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env      
+            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env     
     - run:
         name: Backend smoke test
         command: |
@@ -355,11 +358,9 @@ jobs:
             else
               return 1
             fi
-            
-    - destroy-environment:
-        workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
-    - revert-migrations:
-        workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+    #add destroy env and revert migrations
+    
 
 
 
