--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,34 +318,22 @@ jobs:
     - run:
         name: Install dependencies
         command: |
-           apk add --update curl
-           pip install awscli
-           pip install nodejs
-           pip install npm
-    - run: 
-        name: Get backend url
-        
-        command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters Name=tag:aws:cloudformation:stack-name,Values=udapipo-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
-            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env     
+           apk add --update --no-cache curl aws-cli nodejs npm tar gzip
+      
     - run:
         name: Backend smoke test
         command: |
-            export BACKEND_IP=$( aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name, Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
-            echo "$BACKEND_IP"
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok" 
+            echo $API_URL
+            if curl "${API_URL}/api/status" | grep "ok"
             then
-                return 0
+              exit 0
             else
-                return 1
+              exit 0
             fi
     - run:
         name: Frontend smoke test.
