--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,8 +274,7 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapipo-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      #add destroy env
-    
+      #add destroy env    
   
   deploy-backend:
     docker:
@@ -307,8 +306,6 @@ jobs:
             echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
             ansible-playbook -i inventory.txt deploy-backend.yml
       #add destroy env
-      - revert-migrations:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
   smoke-test:
     docker:
@@ -342,10 +339,14 @@ jobs:
             echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
-              return 0
-            else
               return 1
+            else
+              return 0
             fi
+    - destroy-environment:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+    - revert-migrations:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
     #add destroy env and revert migrations
     
