--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,14 @@ commands:
             aws cloudformation delete-stack \
                 --stack-name udapipo-frontend-<< parameters.workflow-id >> \
                 --region us-east-1
+  
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
       workflow_id:
         type: string
+        default: "{CIRCLE_WORKFLOW_ID:0:7}" 
+        
     steps:
       - run:
           name: reverse migration
