--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,9 +346,9 @@ jobs:
               return 0
             fi
     - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
     - revert-migrations:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
 
     #add destroy env and revert migrations
     
