--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -347,7 +347,9 @@ jobs:
               return 0
             fi
     - destroy-environment:
+        workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
     - revert-migrations:
+        workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
           
 
     
