--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,30 +1,31 @@
 ---
-- name: "update apt packages."
-  become: yes
-  apt:
-    update_cache: yes
 
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
+  - name: "update apt packages"
+    become: true
+    apt:
+      upgrade: yes
 
-- name: remove dependencies that are no longer required
-  become: yes
-  apt:
-    autoremove: yes
+  - name: "upgrade packages"
+    become: true
+    apt:
+      upgrade: yes
 
-- name: "install dependencies."
-  become: yes
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
+  - name: "remove unrequired dependencies"
+    become: true
+    apt:
+      autoremove: yes
 
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+  - name: "install nodejs and npm"
+    become: true
+    apt: 
+      name: ["nodejs", "npm"]
+      state: latest
+      update_cache: yes
+
+  - name: "install pm2"
+    become: true
+    npm: 
+      name: pm2
+      global: yes
+      production: yes
+      state: present
